i-tickets/infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          # arguments from nats streaming docker image (doc into docker hub nats page)
          args: [
              "-p", #port
              "4222",
              "-m", #http port for monitoring
              "8222",
              "-hbi", #interval which server sends heartbeat to client
              "5s",
              "-hbt", #timeout, how long server waiting for a heartbeat
              "5s",
              "-hbf", #number of fail before server close connection to a client
              "2",
              "-SD", #enable STAN debugging
              "-cid", # server ID
              "itickets",
            ]

---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
