i-tickets/infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: acejs/itickets-tickets
          env: # set env variables from k8s node
            - name: DB_URI
              value: "mongodb://tickets-mongo-srv:27017/tickets"
            - name: JWT_KEY #name assign as pod env variable
              valueFrom:
                secretKeyRef:
                  name: jwt-secret #secret container
                  key: JWT_KEY #secret targeted key

---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  type: ClusterIP
  selector:
    app: tickets # this service has to find a set of pods with this label "app: tickets"
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
