i-tickets/infra/k8s/ingress-depl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: itickets
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: itickets.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
                serviceName: auth-srv
                servicePort: 3000
          - path: /?(.*)
            backend:
                serviceName: client-srv
                servicePort: 3000
